--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "pixi.js": "^5.2.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue2-smooth-scroll": "^1.3.0",
-    "vue-simple-markdown": "^1.1.3"
+    "vue-simple-markdown": "^1.1.3",
+    "vue2-smooth-scroll": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.4.1",
+    "compression-webpack-plugin": "^1.1.12",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
@@ -60,7 +61,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
